--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<link href="menu.css" type="text/css" rel="stylesheet"/>
+<link href="CSS/menu.css" type="text/css" rel="stylesheet"/>
 <body>
     <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v9.0&appId=334893951136886&autoLogAppEvents=1" nonce="VOxHuux8"></script>
 <div class="page">
-    <img src=rest.jpeg alt="Welcome to restaurant" width="100%" height="400"/>
+    <img src=images/rest.jpeg alt="Welcome to restaurant" width="100%" height="400"/>
 <div class="header">
 <h1>BARNIK'S RESTAURANT</h1>
 <p>Voted India's Best Fake Restaurant|Indiana</p>
