--- a/menu.html
+++ b/menu.html
@@ -1,9 +1,9 @@
-<link href="menu.css" type="text/css" rel="stylesheet"/>
+<link href="CSS/menu.css" type="text/css" rel="stylesheet"/>
 <body>
     <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v9.0&appId=334893951136886&autoLogAppEvents=1" nonce="VOxHuux8"></script>
 <div class="page">
-    <img src=menupic.jpg alt="Welcome to restaurant" width="100%" height="400"/>
+    <img src=images/menupic.jpg alt="Welcome to restaurant" width="100%" height="400"/>
 <div class="header">
 <h1>BARNIK'S RESTAURANT</h1>
 <p>Voted India's Best Fake Restaurant|Indiana</p>
@@ -17,11 +17,11 @@
 <div class="details">
 <div class="writing">
     <h1>Menu</h1></br>
-    <p><img src="dish.jpg" alt="dishes" width="150" height="200" align="right"/>At Barnik's Restaurant,there are a wide variety of Indian dishes,from very spicy to not spicy at all.Children can have plenty of non-spicy,but tasty dishes to choose from,such as Fried Rice,Hilsa Fish,or Chicken Kosa.If you are new to Bengali food,we recommend that you start off with a non-spicy dish.</p>
+    <p><img src="images/dish.jpg" alt="dishes" width="150" height="200" align="right"/>At Barnik's Restaurant,there are a wide variety of Indian dishes,from very spicy to not spicy at all.Children can have plenty of non-spicy,but tasty dishes to choose from,such as Fried Rice,Hilsa Fish,or Chicken Kosa.If you are new to Bengali food,we recommend that you start off with a non-spicy dish.</p>
      <p>For the spicy lovers,we have all that you want."Spicy" is not the only quality of Barnik's Restaurant.A well-balanced blend of seasonings,herbs and spices is our specialty.Whatever you want,a quick lunch or a relaxing dinner,we have it all</p></br>
     <p>Thank you!</p></br>
-    <p><a href="restaurant-menu-2-2-2-2.pdf" download="restaurant-menu-2-2-2-2.pdf">FULL MENU</a></p></br>
-    <p><a href="togo-3235.pdf" download="togo-3235.pdf">TO GO MENU</a></p></br></br>
+    <p><a href="PDF/restaurant-menu-2-2-2-2.pdf" download="PDF/restaurant-menu-2-2-2-2.pdf">FULL MENU</a></p></br>
+    <p><a href="PDF/togo-3235.pdf" download="PDF/togo-3235.pdf">TO GO MENU</a></p></br></br>
      <hr>
     <p class="sharing">Share this:</p>
 <p><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-lang="en" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
