--- a/dining.html
+++ b/dining.html
@@ -1,9 +1,9 @@
-<link href="menu.css" type="text/css" rel="stylesheet"/>
+<link href="CSS/menu.css" type="text/css" rel="stylesheet"/>
 <body>
     <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v9.0&appId=334893951136886&autoLogAppEvents=1" nonce="VOxHuux8"></script>
 <div class="page">
-    <img src=diningpic.jfif alt="Welcome to restaurant" width="100%" height="400"/>
+    <img src=images/diningpic.jfif alt="Welcome to restaurant" width="100%" height="400"/>
 <div class="header">
 <h1>BARNIK'S RESTAURANT</h1>
 <p>Voted India's Best Fake Restaurant|Indiana</p>
@@ -11,15 +11,15 @@
 </div>
 <nav>
 <ul>
-    <b><a href="restaurant.html">HOME</a> <a href="restaurant.html">ABOUT</a> <a href="dining.html">DINING</a> <a href="menu.html">MENU</a> <a href="contact.html">CONTACT</a></b>
+    <b><a href="index.html">HOME</a> <a href="restaurant.html">ABOUT</a> <a href="dining.html">DINING</a> <a href="menu.html">MENU</a> <a href="contact.html">CONTACT</a></b>
 </ul>
 </nav>
 <div class="details">
 <div class="writing">
     <h1>Dining</h1>
-<p><img src="diningroom.jpg" alt="room" width="150" height="200" align="right"/>Our restaurant is beautifully decorated to reflect our Bengali culture.Besides enjoying the Bengali food,you will feel like you were in foreign with soft foreign music in the background.We are able to accommodate many patrons.Even with the extra space we recommend calling ahead to make a reservation if you plan to have a party of 6 or more.</p></br>
-<p><a href="restaurant-menu-2-2-2-2.pdf" download="restaurant-menu-2-2-2-2.pdf">FULL MENU</a></p></br>
-    <p><a href="togo-3235.pdf" download="togo-3235.pdf">TO GO MENU</a></p></br></br>
+<p><img src="images/diningroom.jpg" alt="room" width="150" height="200" align="right"/>Our restaurant is beautifully decorated to reflect our Bengali culture.Besides enjoying the Bengali food,you will feel like you were in foreign with soft foreign music in the background.We are able to accommodate many patrons.Even with the extra space we recommend calling ahead to make a reservation if you plan to have a party of 6 or more.</p></br>
+<p><a href="PDF/restaurant-menu-2-2-2-2.pdf" download="PDF/restaurant-menu-2-2-2-2.pdf">FULL MENU</a></p></br>
+    <p><a href="PDF/togo-3235.pdf" download="PDF/togo-3235.pdf">TO GO MENU</a></p></br></br>
 <hr>
     <p class="sharing">Share this:</p>
 <p><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-lang="en" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
