--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
-<link href="tele.css" type="text/css" rel="stylesheet"/>
+<link href="CSS/tele.css" type="text/css" rel="stylesheet"/>
 <body>
     <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v9.0&appId=334893951136886&autoLogAppEvents=1" nonce="VOxHuux8"></script>
 <div class="page">
-    <img src=contact.jpg alt="Welcome to restaurant" width="100%" height="400"/>
+    <img src=images/contact.jpg alt="Welcome to restaurant" width="100%" height="400"/>
 <div class="header">
 <h1>BARNIK'S RESTAURANT</h1>
 <p>Voted India's Best Fake Restaurant|Indiana</p>
@@ -11,7 +11,7 @@
 </div>
 <nav>
 <ul>
-    <b><a href="restaurant.html">HOME</a> <a href="restaurant.html">ABOUT</a> <a href="dining.html">DINING</a> <a href="menu.html">MENU</a> <a href="contact.html">CONTACT</a></b>
+    <b><a href="index.html">HOME</a> <a href="restaurant.html">ABOUT</a> <a href="dining.html">DINING</a> <a href="menu.html">MENU</a> <a href="contact.html">CONTACT</a></b>
 </ul>
 </nav>
 <div class="details">
@@ -22,8 +22,8 @@
     <p>8/2/102 Arabinda Sarani</p>
     <p>Dumdum,Kolkata-700028</p>
     <p>1234567890</p></br>
-    <p><a href="restaurant-menu-2-2-2-2.pdf" download="restaurant-menu-2-2-2-2.pdf">FULL MENU</a></p></br>
-    <p><a href="togo-3235.pdf" download="togo-3235.pdf">TO GO MENU</a></p></br></br>
+    <p><a href="PDF/restaurant-menu-2-2-2-2.pdf" download="PDF?restaurant-menu-2-2-2-2.pdf">FULL MENU</a></p></br>
+    <p><a href="PDF/togo-3235.pdf" download="PDF/togo-3235.pdf">TO GO MENU</a></p></br></br>
     <p class="sharing">Share this:</p>
 <p><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-lang="en" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
 <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
