--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 </div>
 <nav>
 <ul>
-    <b><a href="restaurant.html">HOME</a> <a href="index.html">ABOUT</a> <a href="dining.html">DINING</a> <a href="menu.html">MENU</a> <a href="contact.html">CONTACT</a></b>
+    <b><a href="index.html">HOME</a> <a href="index.html">ABOUT</a> <a href="dining.html">DINING</a> <a href="menu.html">MENU</a> <a href="contact.html">CONTACT</a></b>
 </ul>
 </nav>
 <div class="details">
